# VeloxChem

./: .clang-format  .gitignore  .gitlab-ci.yml  AUTHORS.rst  CMakeLists.txt  EriCoulomb_ref.cu  FockDriverGPU_ref.cu  HISTORY.rst  LICENSE  LICENSE-THIRD-PARTY  MANIFEST.in  Makefile  Makefile.setup  PR_SUMMARY.md  README.rst  environment.yml  mkl_env.yml  openblas_env.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tddft_vs_tdhf_22_05_30.txt  test-valet.ipynb  test-xps-driver.ipynb  test-xps.ipynb  veloxchem.sh  vlx_env.yml
python_tests/: CMakeLists.txt  HelperClass.py  Makefile  TestControllers.py  TestExciton.py  TestGeneral.py  TestMath.py  TestMolData.py  TestOneInts.py  TestOrbData.py  TestPen.py  TestReaders.py  TestSolvers.py  TestStreams.py  TestTwoInts.py  addons.py  conftest.py  pulsed_response_plot.py  py_plot_comb.py  run_tests.py  test_aodensitymatrix.py  test_aofockmatrix.py  test_atomtype_identifier.py  test_basis.py  test_broadening.py  test_c6.py  test_checkpoint.py  test_controllers.py  test_core_excitation.py  test_cphfhessian.py  test_cphfpolgrad.py  test_cphfsolver.py  test_cpp.py  test_cpp_abs.py  test_cpp_ecd.py  test_cubicesponsedriver.py  test_cubicgrid.py  test_cubicresponsedriver.py  test_cubicresponsedriver_dft.py  test_cubicresponsedriver_fd.py  (+110 more)
python_tests/inputs/: be.inp  bithio.tpr  bithio.xtc  butane-scan-final.xyz  butane.inp  c2h4.inp  c60_ih.xyz  caf.inp  ch4.inp  cphf_coefficients.h5  cphfpolgrad_coefficients.h5  cphfprolgrad_coefficients.h5  dimer.inp  dummy.h5  exciton.inp  glycol.inp  h2o.inp  h2o.xyz  h2o2.inp  h2se.dens.h5  h2se.inp  h2se.onee.h5  h2se.twoe.h5  h2so4.inp  heh.inp  hessian_gga_data.h5  hessian_lda_data.h5  lambda_ao_ref.txt  li.inp  loprop_water.inp  lp_water.inp  methanol_shg.inp  methanol_shg_reduced.inp  mix_basis_1e.h5  nh3.inp  nh3.xyz  noradr_absorption.txt  noradr_ecd.txt  noradr_tddft.txt  noradrenalin.inp  (+29 more)
python_tests/sup_files/: make_file.py  md5_p.py
src/: CMakeLists.txt  Makefile  Makefile.intel  Makefile.setup  Makefile.setup_cuda  Makefile.setup_hip  VeloxChemMP.cpp  VeloxChemMain.py  bcastdebug.cpp  vlx
src/cmm/: CMMParameters.cpp  CMMParameters.hpp  CMMType.hpp  Makefile
src/controllers/: AppManager.cpp  AppManager.hpp  BaseJob.cpp  BaseJob.hpp  ExecMode.hpp  JobType.hpp  JobsManager.cpp  JobsManager.hpp  Makefile  OptimizationGeometry.cpp  OptimizationGeometry.hpp  PropertyPlasmon.cpp  PropertyPlasmon.hpp  SinglePointEnergy.cpp  SinglePointEnergy.hpp
src/cu_est/: AtomShellData.cpp  AtomShellData.hpp  MoleculeData.cpp  MoleculeData.hpp
src/device/: CMakeLists.txt  Device.hpp  DeviceCompat.hpp  DeviceUtils.hpp  Makefile
src/dft/: AOKohnShamMatrix.cpp  AOKohnShamMatrix.hpp  CMakeLists.txt  ComputeFunctional.cpp  DensityGradientGridDriver.cpp  DensityGradientGridDriver.hpp  DensityGrid.cpp  DensityGrid.hpp  DensityGridCubic.cpp  DensityGridCubic.hpp  DensityGridDriver.cpp  DensityGridDriver.hpp  DensityGridGenerator.cpp  DensityGridGenerator.hpp  DensityGridQuad.cpp  DensityGridQuad.hpp  DensityGridType.hpp  DftSubMatrix.cpp  DftSubMatrix.hpp  FunctionalParser.cpp  FunctionalParser.hpp  GridBox.cpp  GridBox.hpp  GridDriver.cpp  GridDriver.hpp  GridPartitioner.cpp  GridPartitioner.hpp  GridScreener.cpp  GridScreener.hpp  GtoEvaluator.cpp  GtoEvaluator.hpp  GtoFunc.cpp  GtoFunc.hpp  GtoFuncForGGA.cpp  GtoFuncForGGA.hpp  GtoFuncForLDA.cpp  GtoFuncForLDA.hpp  GtoFuncForMGGA.cpp  GtoFuncForMGGA.hpp  GtoRecFunc.cpp  (+44 more)
src/dft_func/: AOKohnShamMatrix.cpp  AOKohnShamMatrix.hpp  CMakeLists.txt  DensityGrid.cpp  DensityGrid.hpp  DensityGridCubic.cpp  DensityGridCubic.hpp  DensityGridData2D.cpp  DensityGridData2D.hpp  DensityGridGenerator.cpp  DensityGridGenerator.hpp  DensityGridQuad.cpp  DensityGridQuad.hpp  DftFunc.cpp  DftFunc.hpp  DftSubMatrix.cpp  DftSubMatrix.hpp  FunctionalParser.cpp  FunctionalParser.hpp  GridBox.cpp  GridBox.hpp  GridDriver.cpp  GridDriver.hpp  GridPartitioner.cpp  GridPartitioner.hpp  GridScreener.cpp  GridScreener.hpp  GtoValues.cpp  GtoValues.hpp  GtoValuesRecD.cpp  GtoValuesRecD.hpp  GtoValuesRecF.cpp  GtoValuesRecF.hpp  GtoValuesRecG.cpp  GtoValuesRecG.hpp  GtoValuesRecP.cpp  GtoValuesRecP.hpp  GtoValuesRecS.cpp  GtoValuesRecS.hpp  LebedevLaikovQuadrature.cpp  (+47 more)
src/dftfuncs/: Becke88Functional.cpp  Becke88Functional.hpp  CMakeLists.txt  FunctionalParser.cpp  FunctionalParser.hpp  LYPFunctional.cpp  LYPFunctional.hpp  Makefile  NewFunctionalParser.cpp  NewFunctionalParser.hpp  PairDensityBecke88.cpp  PairDensityLYP.cpp  PairDensityLYP.hpp  PairDensityPBE_C.cpp  PairDensityPBE_C.hpp  PairDensityPBE_X.cpp  PairDensityPBE_X.hpp  PairDensitySlater.cpp  PairDensitySlater.hpp  PairDensityVWN.cpp  PairDensityVWN.hpp  PkzbFunctional.cpp  PkzbFunctional.hpp  SlaterFunctional.cpp  SlaterFunctional.hpp  VWN3Functional.cpp  VWN3Functional.hpp
src/eridrv/: CMakeLists.txt  DiagEriDriver.hpp  DiagEriRecFacts.hpp  DiagEriRecForSPSP.hpp  DiagEriRecForSSSS.hpp  EriBlockDims.cpp  EriBlockDims.hpp  Makefile
src/exciton/: AssembleMatrices.cpp  AssembleMatrices.hpp  Makefile
src/general/: AngularMomentum.cpp  AngularMomentum.hpp  BatchFunc.hpp  Buffer.hpp  BufferImpl.hpp  BufferMacros.hpp  CMakeLists.txt  Codata.cpp  Codata.hpp  ConfigMKL.hpp.in  CpcmUtils.cpp  CpcmUtils.hpp  CustomConstrains.hpp  CustomViews.hpp  ErrorHandler.cpp  ErrorHandler.hpp  ExecMode.hpp  FmtType.hpp  FourIndexes.cpp  FourIndexes.hpp  IntegerSequence.hpp  Makefile  MatOrder.hpp  MemAlloc.cpp  MemAlloc.hpp  MemBlock.hpp  MemBlock2D.hpp  MetaUtils.hpp  MpiFunc.cpp  MpiFunc.hpp  MultiTimer.cpp  MultiTimer.hpp  NumaPolicy.hpp  OMPTasks.cpp  OMPTasks.hpp  OpenMPFunc.cpp  OpenMPFunc.hpp  Point.hpp  RecursionBlock.hpp  SimdArray.hpp  (+25 more)
src/gpu/: Allocator.hpp  AngularMomentumIntegrals.cu  AngularMomentumIntegrals.hip  AngularMomentumIntegrals.hpp  BoysFuncGPU.hpp  BoysFuncTable.cpp  BoysFuncTable.hpp  ChunkedMemcpyGPU.hpp  CoulombDriverGPU.hip  CoulombDriverGPU.hpp  CudaBoysFunction.hpp  CudaDevices.cpp  (+402 more)
unit_tests/: CMakeLists.txt  Makefile  UnitTestVeloxChem.cpp  UnitTestVeloxChemMP.cpp
(+30588 files in other folders)
