[build-system]
requires = [
  "mpi4py>=3.0",
  "numpy>=1.15.0",
  "pybind11>=2.6",
  "pip>=19.0",
  "setuptools>=42", 
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "VeloxChem"
version = "1.0rc1.post1"
description = "VeloxChem: an electronic structure code"
authors = ["VeloxChem developers <info@veloxchem.org>"]

[tool.poetry.dependencies]
geometric = "^0.9"
h5py = "^2.8"
loprop = "^0.2"
mpi4py = "^3.0"
numpy = "^1.13"
psutil = "^5.6"
pybind11 = "^2.6"
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
