[metadata]
name = veloxchem
description = VeloxChem: an electronic structure code
keywords = electronic structure theory, response theory, computational spectroscopy
license = LGPLv3+
license_files =
    COPYING
    COPYING.LESSER
author = VeloxChem developers
author_email = info@veloxchem.org
url = https://veloxchem.org
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Chemistry
version = attr: veloxchem.__version__

[options]
python_requires = >= 3.6

setup_requires =
    mpi4py >= 3.0
    numpy >= 1.15.0
    pybind11 >= 2.6

install_requires =
    geometric >= 0.9.7
    h5py >= 2.8
    mpi4py >= 3.0
    numpy >= 1.15.0
    psutil >= 5.6

test_suite =
    python_tests

[options.extras_require]
qmmm =
    cppe == 0.2.1
    MDAnalysis >= 1.0

doc =
    sphinx
    sphinx_rtd_theme

test =
    pytest
    pytest-cov

dev =
    %(doc)s
    %(test)s
    yapf

[options.entry_points]
console_scripts =
    vlx = veloxchem.main:main

[flake8]
max-line-length = 88
exclude = docs/conf.py
# these error codes interfere with Black
ignore = E203, E231, W503, W504
select = C,E,F,W,B

[yapf]
based_on_style = google
allow_split_before_dict_value = False

[aliases]
test = pytest
