[metadata]
name = veloxchem
version = attr: veloxchem.__version__
description = VeloxChem: an electronic structure code
keywords = electronic structure theory, response theory, computational spectroscopy
license = LGPLv3+
license_files =
    COPYING
    COPYING.LESSER
author = VeloxChem developers
author_email = info@veloxchem.org
url = https://veloxchem.org
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: C++
    Topic :: Scientific/Engineering :: Chemistry

[options]
packages = veloxchem

package_dir =
   veloxchem=src/pymodule

python_requires = >= 3.7

setup_requires =
    mpi4py >= 3.0
    numpy >= 1.15.0
    pybind11[global] >= 2.6
    setuptools >=46.4.0
    wheel
    scikit-build >=0.13
    cmake >= 3.18
    ninja; platform_system!='Windows'

install_requires =
    geometric @ git+https://github.com/leeping/geomeTRIC.git@e982ad6#egg=geometric
    h5py >= 2.8
    mpi4py >= 3.0
    numpy >= 1.15.0
    psutil >= 5.6

test_suite =
    python_tests

[options.extras_require]
qmmm =
    cppe >= 0.3.1
    MDAnalysis >= 1.0

doc =
    sphinx
    sphinx_rtd_theme

test =
    h5py >= 2.8
    geometric @ git+https://github.com/leeping/geomeTRIC.git@e982ad6#egg=geometric
    psutil >= 5.6
    pytest
    pytest-cov

dev =
    %(doc)s
    %(test)s
    yapf

[options.entry_points]
console_scripts =
    vlx = veloxchem.main:main

[flake8]
max-line-length = 88
exclude = docs/conf.py
# these error codes interfere with Black
ignore = E203, E231, W503, W504
select = C,E,F,W,B

[yapf]
based_on_style = google
allow_split_before_dict_value = False

[aliases]
test = pytest
